# cdn-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-swarm.yml  init-aws.sh  nginx.conf  test-pipeline.sh
lambda/: get_file.py  ingest.py  list_files.py  upload.py
migrations/: 001_create_documents_table.sql
rest-server/: Cargo.toml  Dockerfile
rest-server/migrations/: 001_create_documents_table.sql
rest-server/src/: aws_client.rs  handlers.rs  main.rs  models.rs
src/: handlers.rs  main.rs  models.rs  utils.rs
static/: index.html
web/: Dockerfile  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
web/src/: app.html  hooks.server.ts
web/src/routes/: +page.svelte
web/src/routes/api/documents/: +server.ts
web/src/routes/api/documents/[id]/: +server.ts
