[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", default-features = false, features = ["rt-multi-thread", "macros", "time", "fs"] }
axum = { version = "0.8.4", default-features = false, features = ["http2", "tokio", "multipart"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "migrate", "uuid"] }
uuid = { version = "1.1.18", features = ["v4"] }
sha2 = { version = "0.10.9" }
hex = { version = "0.4.3" }