[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", default-features = false, features = ["rt-multi-thread", "macros", "time", "fs"] }
axum = { version = "0.8.4", default-features = false, features = ["http1", "http2", "tokio", "multipart", "json"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "migrate", "uuid", "macros", "chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.145" }
uuid = { version = "1.1.18", features = ["v4", "serde"] }
sha2 = { version = "0.10.9" }
hex = { version = "0.4.3" }
