[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", default-features = false, features = ["rt-multi-thread", "macros", "time", "fs"] }
axum = { version = "0.8.4", default-features = false, features = ["http1", "http2", "tokio", "multipart", "json"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.145" }
sha2 = { version = "0.10.9" }
hex = { version = "0.4.3" }
aws-config = { version = "1.8.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.108.0" }
aws-sdk-dynamodb = { version = "1.96.0" }
bytes = { version = "1.10.1" }
